Reworked output as text
