# package/server/controllers/start_game.go
@@ -1,8 +1,8 @@
 package controllers
 
 import (
+	"github.com/aklinker1/tic-tak-toe-server/package/server/board"
 	"github.com/aklinker1/tic-tak-toe-server/package/server/gen/restapi/operations"
-	"github.com/aklinker1/tic-tak-toe-server/package/server/mappers"
 	"github.com/aklinker1/tic-tak-toe-server/package/server/repos"
 	"github.com/go-openapi/runtime/middleware"
 )
@@ -14,8 +14,7 @@ func UseStartGameController(api *operations.TicTakToeAPI) {
 			if err != nil {
 				return operations.NewStartGameDefault(500).WithPayload(err.Error())
 			}
-			payload := mappers.GameEntityToModel(game)
-			return operations.NewStartGameCreated().WithPayload(payload)
+			return operations.NewStartGameCreated().WithPayload(board.Sprint(game))
 		},
 	)
 }
